# G2-Alarmsystem

./: .project  CMakeLists.txt  Makefile  README.md  config_example.json  example.json  partitions.csv  sdkconfig
main/: AnalogCycler.h  AnalogRef.h  AnalogValue.h  ArmByNumber.cpp  ArmByNumber.h  CommandDispatcher.cpp  CommandDispatcher.h  Config.cpp  Config.h  DigitalValue.h  G2Alarm.cpp  G2Alarm.h  I2CSetOutputCmd.h  I2CTask.cpp  I2CTask.h  IAlarmState.h  IOStatus.cpp  IOStatus.h  IReferenceValueGetter.h  IWiegandSignal.h  Wiegand.cpp  Wiegand.h  ZoneData.h  component.mk  main.cpp
main/sound_indication/: DisarmSong.cpp  DisarmSong.h  EntryDelaySong.cpp  EntryDelaySong.h  ErrorSong.h  ExitDelaySong.h  Silence.h  Song.h  SongPlayer.cpp  SongPlayer.h  TrippedSong.cpp  TrippedSong.h
main/states/: AlarmBaseState.cpp  AlarmBaseState.h  AlarmFSM.h  Armed.cpp  Armed.h  AutoRearm.cpp  AutoRearm.h  Idle.cpp  Idle.h  PreArmCheck.cpp  PreArmCheck.h  Tripped.cpp  Tripped.h
main/states/events/: AnalogValueOutsideLimits.h  DigitalValueNotIdle.h
main/status_indication/: DisarmSong.cpp  ErrorSong.cpp  ExitDelaySong.cpp  StatusIndicator.cpp  StatusIndicator.h  TrippedSong.cpp
